--- a/index.html
+++ b/index.html
@@ -533,8 +533,8 @@
     <header class="header">
         <div class="header-container">
             <a href="#" class="roku-logo">ROKU</a>
-            <a href="tel:+1-(855)-535-3156" class="header-phone">
-                📞 Call Support: +1-(855)-535-3156
+            <a href="tel:+1 (888) 897-5689" class="header-phone">
+                📞 Call Support: +1 (888) 897-5689
             </a>
         </div>
     </header>
@@ -553,7 +553,7 @@
         <div class="hero-container">
             <h1 class="hero-title">Get help with your Roku device</h1>
             <p class="hero-subtitle">Find solutions, troubleshoot issues, or contact our support team for personalized assistance</p>
-            <a href="tel:+1-(855)-535-3156" class="hero-cta">
+            <a href="tel:+1 (888) 897-5689" class="hero-cta">
                 📞 Call Support Now
             </a>
         </div>
