--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
         <div class="emergency-support">
             <h3 class="emergency-title">Need immediate help?</h3>
             <p class="emergency-text">If your Roku device isn't working and you need urgent assistance, our support team is standing by</p>
-            <div class="emergency-phone">+1-(855)-535-3156</div>
-            <a href="tel:+1-(855)-535-3156" class="emergency-cta">
+            <div class="emergency-phone">+1 (888) 897-5689</div>
+            <a href="tel:+1 (888) 897-5689" class="emergency-cta">
                 🚨 Call Emergency Support
             </a>
         </div>
@@ -644,21 +644,21 @@
                     <div class="contact-method-icon">📞</div>
                     <h3 class="contact-method-title">Phone Support</h3>
                     <p class="contact-method-desc">Speak directly with a Roku support specialist</p>
-                    <a href="tel:+1-(855)-535-3156" class="contact-method-cta">Call +1-(855)-535-3156</a>
+                    <a href="tel:+1 (888) 897-5689" class="contact-method-cta">Call +1 (888) 897-5689</a>
                 </div>
                 
                 <div class="contact-method">
                     <div class="contact-method-icon">💬</div>
                     <h3 class="contact-method-title">Live Chat</h3>
                     <p class="contact-method-desc">Chat with our support team online</p>
-                    <a href="tel:+1-(855)-535-3156" class="contact-method-cta">Start Chat</a>
+                    <a href="tel:+1 (888) 897-5689" class="contact-method-cta">Start Chat</a>
                 </div>
                 
                 <div class="contact-method">
                     <div class="contact-method-icon">📧</div>
                     <h3 class="contact-method-title">Email Support</h3>
                     <p class="contact-method-desc">Send us your questions and we'll respond quickly</p>
-                    <a href="tel:+1-(855)-535-3156" class="contact-method-cta">Contact Us</a>
+                    <a href="tel:+1 (888) 897-5689" class="contact-method-cta">Contact Us</a>
                 </div>
             </div>
         </div>
